fix spacings

--- a/src/app/pages/resume/resume.component.scss
+++ b/src/app/pages/resume/resume.component.scss
@@ -33,4 +33,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  > h2 {
+    margin: 0;
+  }
 }
